<resources>
    <string name="app_name">Firebase</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email-Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="todo1">TODO</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="checking">checking</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="login_with_google">Login with google</string>
    <string name="log_out">Log Out</string>
    <string name="don_t_have_one_register">Don\'t Have One ? Register</string>
</resources>