<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="202dp"
        android:layout_height="208dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/todo1"
        android:src="@drawable/signup"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:autofillHints=""
        android:ems="12"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="12"
        android:paddingEnd="10dp"
        android:longClickable="false"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/eyehide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        android:contentDescription="@string/todo3" />

    <EditText
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:ems="12"
        android:paddingEnd="10dp"
        android:longClickable="false"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="#A1887F"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/confirm_password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/eyehide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="@+id/confirm"
        app:layout_constraintTop_toTopOf="@+id/confirm"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo4" />

    <Button
        android:id="@+id/signup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="132dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm"
        app:layout_constraintVertical_bias="0.709" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="130dp"
        android:background="#fff"
        android:drawableStart="@drawable/google"
        android:padding="10dp"
        android:text="@string/sign_up_with_google"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

</androidx.constraintlayout.widget.ConstraintLayout>